Fixed scrollbar bug

--- a/src/sass/_sidebar.scss
+++ b/src/sass/_sidebar.scss
@@ -19,7 +19,6 @@ $hide_scroll_padding: 17px;
   left: 0;
   overflow-x: hidden;
   overflow-y: auto;
-  overflow: -moz-scrollbars-none;
 
   &::-webkit-scrollbar {
     display: none;
